--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:background="#FFFFFF"
     android:padding="30dp"
-    tools:context=".adminlogin">
+    tools:context=".AdminLogin">
 
     <TextView
         android:id="@+id/textView4"
