--- a/app/src/main/res/layout/activity_admin_panel.xml
+++ b/app/src/main/res/layout/activity_admin_panel.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:background="#FFFFFF"
     android:padding="30dp"
-    tools:context=".adminpanel">
+    tools:context=".AdminPanel">
 
     <Button
         android:id="@+id/add"
