--- a/app/src/main/res/layout/activity_admin_signup.xml
+++ b/app/src/main/res/layout/activity_admin_signup.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:padding="30dp"
     android:background="#FFFFFF"
-    tools:context=".adminsignup">
+    tools:context=".AdminSignup">
 
     <TextView
         android:id="@+id/textView5"
