--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -17,8 +17,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:itemBackground="@color/colorPrimary"
+        app:itemBackground="@color/skyBlue"
         app:itemIconTint="@drawable/nav_selector"
+        app:itemTextColor="#000000"
         app:menu="@menu/bottom_menu" />
 
 </RelativeLayout>
