--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,6 @@
     <color name="backgroundLightGray">#EEEEEE</color>
     <color name="skyBlue">#4EBEF1</color>
     <color name="primary_text">#212121</color>
+    <color name="colorOrange">#FF5722</color>
+
 </resources>
