--- a/app/src/main/res/layout/activity_update_parking.xml
+++ b/app/src/main/res/layout/activity_update_parking.xml
@@ -8,29 +8,54 @@
     tools:context=".UpdateParkingArea">
 
     <!--fragment to display our maps-->
-    <fragment xmlns:tools="http://schemas.android.com/tools"
+
+    <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MapsActivity" />
+        android:layout_height="match_parent" />
 
     <!--search view to search our location-->
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/parking"
+        tools:ignore="SpeakableTextPresentCheck" />
+
     <androidx.appcompat.widget.SearchView
         android:id="@+id/idSearchView"
-        android:layout_width="match_parent"
+        android:layout_width="340dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="#BFBFBF"
         android:elevation="5dp"
         app:iconifiedByDefault="false"
         app:queryHint="Search Here" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/findButton"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
-        <include layout="@layout/bottom_sheet_dialog_layout" />
+        <include
+            android:id="@+id/sheet_layout"
+            layout="@layout/bottom_sheet_dialog_layout" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </RelativeLayout>
