--- a/app/src/main/res/layout/activity_view_place.xml
+++ b/app/src/main/res/layout/activity_view_place.xml
@@ -143,7 +143,7 @@
                             android:textColor="#000000" />
 
                         <TextView
-                            android:id="@+id/textView8"
+                            android:id="@+id/per_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="0dp"
