--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -1,74 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/purchase_location_name"
-            android:text="@string/home_location"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:textSize="15sp"
-            android:textStyle="normal|bold"
-            android:textColor="@color/primary_text"
-            android:layout_marginTop="15sp"
-            android:layout_weight="1"
-            android:gravity="left"/>
 
-        <TextView
-            android:id="@+id/purchase_location_amount"
-            android:text="@string/purchase_amount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:textSize="15sp"
-            android:textStyle="normal|bold"
-            android:textColor="@color/primary_text"
-            android:layout_marginTop="15sp"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:paddingRight="15sp"/>
+    <ImageView
+        android:id="@+id/imageView11"
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="15dp"
+        app:srcCompat="@drawable/ic_baseline_local_parking_24" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/purchase_location_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="15sp"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:text="@string/home_location"
+                android:textColor="@color/primary_text"
+                android:textSize="15sp"
+                android:textStyle="normal|bold" />
+
+            <TextView
+                android:id="@+id/purchase_location_amount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="15sp"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:paddingRight="15sp"
+                android:text="@string/purchase_amount"
+                android:textColor="@color/primary_text"
+                android:textSize="15sp"
+                android:textStyle="normal|bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/purchase_location_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="15sp"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:text="@string/purchase_location_date"
+                android:textColor="@color/primary_text"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/purchase_location_paid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:paddingRight="15sp"
+                android:text="@string/purchase_paid"
+                android:textColor="@color/primary_text"
+                android:textSize="15sp"
+                android:textStyle="normal|bold" />
+        </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/purchase_location_date"
-            android:text="@string/purchase_location_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:textColor="@color/primary_text"
-            android:layout_marginBottom="15sp"
-            android:layout_weight="1"
-            android:gravity="left"/>
 
-        <TextView
-            android:id="@+id/purchase_location_paid"
-            android:text="@string/purchase_paid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:textSize="15sp"
-            android:textStyle="normal|bold"
-            android:textColor="@color/primary_text"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:paddingRight="15sp"/>
-    </LinearLayout>
-
-
-</LinearLayout>
+</RelativeLayout>
