--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -6,18 +6,10 @@
     android:layout_height="wrap_content">
 
 
-    <ImageView
-        android:id="@+id/card_image"
-        android:layout_width="30dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="15dp"
-        app:srcCompat="@drawable/ic_baseline_local_parking_24" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginEnd="100dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -33,25 +25,11 @@
                 android:layout_marginTop="15sp"
                 android:layout_weight="1"
                 android:gravity="left"
-                android:text="@string/home_location"
+                android:text="Card Name"
                 android:textColor="@color/primary_text"
                 android:textSize="15sp"
                 android:textStyle="normal|bold" />
 
-            <TextView
-                android:id="@+id/purchase_location_amount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="15sp"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:paddingRight="15sp"
-                android:text="@string/purchase_amount"
-                android:textColor="@color/primary_text"
-                android:textSize="15sp"
-                android:textStyle="normal|bold" />
         </LinearLayout>
 
         <LinearLayout
@@ -67,25 +45,25 @@
                 android:layout_marginBottom="15sp"
                 android:layout_weight="1"
                 android:gravity="left"
-                android:text="@string/purchase_location_date"
+                android:text="card number"
                 android:textColor="@color/primary_text"
                 android:textSize="15sp" />
 
-            <TextView
-                android:id="@+id/purchase_location_paid"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:paddingRight="15sp"
-                android:text="@string/purchase_paid"
-                android:textColor="@color/primary_text"
-                android:textSize="15sp"
-                android:textStyle="normal|bold" />
         </LinearLayout>
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/card_image"
+        android:layout_width="89dp"
+        android:layout_height="47dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        app:srcCompat="@drawable/ic_baseline_local_parking_24" />
 
 
 </RelativeLayout>
