--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,6 +18,8 @@
             android:icon="@drawable/ic_baseline_favorite_border_24"
             android:title="Favorites" />
 
+
+
     </group>
 
     <item android:title="Account">
@@ -31,6 +33,11 @@
                 android:id="@+id/nav_security"
                 android:icon="@drawable/ic_baseline_security_24"
                 android:title="Security Settings" />
+
+            <item
+                android:id="@+id/nav_maps"
+                android:icon="@drawable/ic_baseline_security_24"
+                android:title="Maps" />
 
             <item
                 android:id="@+id/nav_about"
