--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -30,15 +30,9 @@
                 android:icon="@drawable/ic_account_box_black_24dp"
                 android:title="Profile" />
             <item
-                android:id="@+id/nav_security"
-                android:icon="@drawable/ic_baseline_security_24"
-                android:title="Security Settings" />
-
-            <item
-                android:id="@+id/nav_maps"
-                android:icon="@drawable/ic_baseline_security_24"
-                android:title="Maps" />
-
+                android:id="@+id/nav_notify"
+                android:icon="@drawable/ic_baseline_notifications_none_24"
+                android:title="Notifications" />
             <item
                 android:id="@+id/nav_about"
                 android:icon="@drawable/ic_baseline_info_24"
