--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,7 +22,7 @@
     <color name="skyBlue">#4EBEF1</color>
     <color name="primary_text">#212121</color>
     <color name="colorOrange">#FF5722</color>
-    <color name="primaryBlue">#03A9F4</color>
+    <color name="primaryBlue">#006BBF</color>
     <color name="colorInverted">#F44336</color>
 
 </resources>
