--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:background="#FFFFFF"
     android:padding="30dp"
-    tools:context=".Login">
+    tools:context=".LoginActivity">
 
 
     <TextView
