--- a/app/src/main/res/layout/fragment_seat_selection.xml
+++ b/app/src/main/res/layout/fragment_seat_selection.xml
@@ -162,6 +162,7 @@
                                         android:layout_centerVertical="true"
                                         android:hint="Departure"
                                         android:text="Departure"
+                                        android:background="@drawable/button_selector"
                                         android:textColor="@color/colorMediumGray" />
 
                                     <Button
@@ -171,6 +172,7 @@
                                         android:layout_centerHorizontal="true"
                                         android:layout_centerVertical="true"
                                         android:layout_marginLeft="20dp"
+                                        android:background="@drawable/button_selector"
                                         android:hint="Return"
                                         android:text="Return"
                                         android:textColor="@color/colorMediumGray" />
@@ -225,7 +227,7 @@
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="412dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="-45dp"
                     android:layout_marginRight="8dp"
@@ -932,29 +934,6 @@
 
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:layout_weight="100"
-                            android:orientation="horizontal">
-
-                            <LinearLayout
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="50"
-                                android:gravity="center">
-
-                                <Button
-                                    android:id="@+id/btncardpay"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:text="Payment"
-                                    android:textSize="12sp" />
-                            </LinearLayout>
-
-                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -965,7 +944,30 @@
             </LinearLayout>
 
         </ScrollView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_weight="100"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal">
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="50"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/btncardpay"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Payment"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+        </LinearLayout>
     </RelativeLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
